add docs tracking progress

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,7 @@
 	"java.project.sourcePaths": ["src"],
 	"java.project.outputPath": "bin",
 	"java.project.referencedLibraries": ["lib/**/*.jar"],
-	"java.format.settings.url": ".vscode/eclipse-java-google-style.xml"
+	"java.format.settings.url": ".vscode/eclipse-java-google-style.xml",
+	"docwriter.progress.trackTypes": true,
+	"docwriter.progress.trackClasses": true
 }
